[package]
name = "sss_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the keyshare gRPC server
name = "keyshare-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "keyshare-client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"]}
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
secp256k1 = { version = "0.28.2", features = ["rand-std"] }
hex = "0.4.3"
shamir_secret_sharing = "0.1.1"
bc-rand = "0.1"
bc-shamir = "0.3.1"
bip39 = "2.0.0"
blake2 = "0.10.6"

[build-dependencies]
tonic-build = "0.11"
